[tool.poetry]
name = "pymc-notebooks"
version = "0.1.0"
description = ""
authors = ["Jack Sheridan <jack.sheridan@wolt.com>"]

[tool.poetry.dependencies]
python = "3.10.6"
pymc = "^4.1.4"
numpy = "^1.23.1"
seaborn = "^0.11.2"
numpyro = "^0.10.0"
ipykernel = "^6.15.1"
graphviz = "^0.20.1"
scipy = "^1.9.0"
pandas = "^1.4.3"
sklearn = "^0.0"
ipython = "^8.5.0"
notebook = "^6.4.12"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
